Updates from Overleaf

--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -1,13 +1,13 @@
-@ARTICLE{Fettweis,
-    author={A. {Fettweis}},
-    journal={Proceedings of the IEEE},
-    title={Wave digital filters: Theory and practice},
-    year={1986},
-    volume={74},
-    number={2},
-    pages={270-327},
-    keywords={Digital filters;Circuits;Microwave filters;Filtering theory;Dynamic range;Books;Lattices;Stability;Stress;Signal design},
-    doi={10.1109/PROC.1986.13458},
-    ISSN={1558-2256},
-    month={Feb}
+@INPROCEEDINGS {canfielddafilou:werner:bellEffects:2017,
+    author    = {Elliot K. Canfield-Dafilou and Kurt J. Werner},
+    title     = {Modal Audio Effects: A Carillon Case Study},
+    booktitle = {Proceedings of the 20th International Conference on Digital Audio Effects},
+    year      = {2017}
+}
+
+@INPROCEEDINGS {rau:das:canfielddafilou:carillon:2019,
+    author    = {Mark Rau and Orchisama Das and Elliot K. Canfield-Dafilou},
+    title     = {Improved Carillon Synthesis},
+    booktitle = {Proceedings of the 22nd International Conference on Digital Audio Effects},
+    year      = {2019}
 }
