--- a/Paper/waterbottles.tex
+++ b/Paper/waterbottles.tex
@@ -5,7 +5,7 @@
 %------------------------------------------------------------------------------------------
 %  !  !  !  !  !  !  !  !  !  !  !  ! user defined variables  !  !  !  !  !  !  !  !  !  !  !  !  !  !
 % Please use these commands to define title and author(s) of the paper:
-\def\papertitle{Bad Circuit Modelling}
+\def\papertitle{Waterbottle Synthesis with Modal Signal Processing}
 \def\paperauthorA{Elliot K. Canfield-Dafilou, Mark Rau, Jatin Chowdhury}
 
 % Authors' affiliations have to be set below
@@ -159,9 +159,28 @@
 \maketitle
 %
 \begin{abstract}
-TODO
+We present a method for accurately synthesizing the acoustic response
+of a waterbottle using modal decomposition.
 \end{abstract}
 
+\section{Introduction} \label{sec:intro}
+%
+Intro here \dots
+
+\section{Measurements} \label{sec:measure}
+%
+Talk about measurements \dots
+
+\section{Analysis} \label{sec:analysis}
+%
+Talk about analysis \dots
+
+\begin{figure}
+    \centering
+    \includegraphics[width=3in]{../Figures/HydroFlask/empty.png}
+    \caption{Figure here}
+    \label{fig:empty}
+\end{figure}
 
 %\newpage
 \nocite{*}
