--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -11,3 +11,43 @@
     booktitle = {Proceedings of the 22nd International Conference on Digital Audio Effects},
     year      = {2019}
 }
+
+@inproceedings {abel_kurt_modal,
+    author = {Jonathan S. Abel and Kurt James Werner},
+    title  = {Distortion and Pitch Processing Using A Modal Reverberator Architecture},
+    booktitle = {Proceedings of the 18th International Conference on Digital Audio Effects},
+    year      = {2015}
+}
+
+@conference{abel2014a,
+	title = {A Modal Architecture for Artificial Reverberation with Application to Room Acoustics Modeling},
+	author = {Abel, Jonathan S. and Coffin, Sean and Spratt, Kyle},
+	booktitle = {Audio Engineering Society Convention 137},
+	month = {Oct},
+	year = {2014},
+	url = {http://www.aes.org/e-lib/browse.cfm?elib=17531}
+}
+
+@inproceedings{travis_cymbals,
+    author = {Travis Skare and Jonathan Abel},
+    title = {Real-Time Modal Synthesis of Crash Cymbals with Nonlinear Approximations, Using a GPU},
+    booktitle = {Proceedings of the 22nd International Conference on Digital Audio Effects},
+    year = {2019}
+}
+
+@article{giannoulis2012compressor,
+	title = {Digital Dynamic Range Compressor Design-A Tutorial and Analysis},
+	author = {Giannoulis, Dimitrios and Massberg, Michael and Reiss, Joshua D.},
+	journal = {J. Audio Eng. Soc},
+	volume = {60},
+	number = {6},
+	pages = {399--408},
+	year = {2012},
+	url = {http://www.aes.org/e-lib/browse.cfm?elib=16354}
+}
+
+@MISC{phasorfilter,
+    author = {Max Mathews and Julius O. Smith Iii},
+    title = {Methods for Synthesizing Very High Q Parametrically Well Behaved Two Pole Filters},
+    year = {2003}
+}
