Add to DAFx paper

--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -47,7 +47,7 @@
 }
 
 @MISC{phasorfilter,
-    author = {Max Mathews and Julius O. Smith Iii},
+    author = {Max Mathews and Julius O. Smith III},
     title = {Methods for Synthesizing Very High Q Parametrically Well Behaved Two Pole Filters},
     year = {2003}
 }
