Add vibrato and impact stuff to paper [ci skip]

--- a/Paper/references.bib
+++ b/Paper/references.bib
@@ -28,6 +28,14 @@
 	url = {http://www.aes.org/e-lib/browse.cfm?elib=17531}
 }
 
+@misc{hydroflask_email,
+    author = {Lucas Alberg},
+    title = {Re: Hydroflask Acoustic Research},
+    year = {2020},
+    month = {February},
+    howpublished = "personal communication"
+}
+
 @inproceedings{travis_cymbals,
     author = {Travis Skare and Jonathan Abel},
     title = {Real-Time Modal Synthesis of Crash Cymbals with Nonlinear Approximations, Using a GPU},
