Updates from Overleaf

--- a/Paper/waterbottles.tex
+++ b/Paper/waterbottles.tex
@@ -6,7 +6,7 @@
 %  !  !  !  !  !  !  !  !  !  !  !  ! user defined variables  !  !  !  !  !  !  !  !  !  !  !  !  !  !
 % Please use these commands to define title and author(s) of the paper:
 \def\papertitle{Waterbottle Synthesis with Modal Signal Processing}
-\def\paperauthorA{Elliot K. Canfield-Dafilou, Mark Rau, Jatin Chowdhury}
+\def\paperauthorA{Jatin Chowdhury, Mark Rau, and Elliot K. Canfield-Dafilou}
 
 % Authors' affiliations have to be set below
 
